--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
       transform-origin: 50% 50% 0px;
       width: 179px;
       height: 467px;
-      top: 0px;
-      left: 653px;
+      left: 747px;
+      top: 15px;
+      transform-style: preserve-3d;
+      transform: translate3d(-77px, 115px, 0px) rotateZ(-0.997305deg);
     }
     .gwd-img-1834 {
       position: absolute;
@@ -115,14 +117,6 @@
       top: 384px;
       height: 83px;
       left: 211px;
-    }
-    .gwd-img-h606 {
-      position: absolute;
-      transform-origin: 50% 50% 0px;
-      height: 83px;
-      width: 205px;
-      top: 389px;
-      left: 449px;
     }
     .gwd-img-fq6y {
       position: absolute;
@@ -133,11 +127,11 @@
     }
     .gwd-img-1dml {
       position: absolute;
-      left: 0px;
       top: 467px;
       transform-origin: 50% 50% 0px;
-      width: 325px;
       height: 190px;
+      left: 4px;
+      width: 357px;
     }
     .gwd-img-1569 {
       position: absolute;
@@ -147,14 +141,22 @@
       left: 566px;
       top: 482px;
       transform-style: preserve-3d;
-      transform: translate3d(15px, -40px, 0px) rotateZ(-1.18894deg);
+      transform: translate3d(46px, 112px, 0px) rotateZ(-1.18894deg);
     }
     .gwd-img-dn22 {
       position: absolute;
       width: 249px;
       height: 190px;
-      left: 330px;
-      top: 467px;
+      left: 361px;
+      top: 641px;
+    }
+    .gwd-img-okrp {
+      position: absolute;
+      height: 265px;
+      top: 384px;
+      transform-origin: 50% 50% 0px;
+      left: 361px;
+      width: 306px;
     }
     @media (width: 810px) and (height: 467px) {}
   </style>
@@ -172,11 +174,11 @@
   <img src="assets/image_7.png" class="gwd-img-1yey">
   <img src="assets/mantequillla.jpg" id="mantequillla" class="gwd-img-mp3j">
   <img src="assets/image_9.png" class="gwd-img-1834">
-  <img src="assets/image_10.png" class="gwd-img-h606">
   <img src="assets/cooltext401161414189545.gif" id="cooltext401161414189545" class="gwd-img-fq6y">
   <img src="assets/image_11.png" class="gwd-img-1dml">
   <img src="assets/image_12.png" class="gwd-img-1569">
   <img src="assets/image_13.png" class="gwd-img-dn22">
+  <img src="assets/unknown-4A65D.png" id="unknown-4A65D" class="gwd-img-okrp">
 </body>
 
 </html>
