--- a/index.html
+++ b/index.html
@@ -31,24 +31,6 @@
       transform: perspective(1400px) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
       transform-style: preserve-3d;
     }
-    .gwd-img-lm1o {
-      position: absolute;
-      width: 198px;
-      height: 292px;
-      transform-origin: 50% 50% 0px;
-      left: 275px;
-      top: -4px;
-    }
-    .gwd-img-1sxh {
-      position: absolute;
-      left: 179px;
-      top: 95px;
-      transform-origin: 50% 50% 0px;
-      transform-style: preserve-3d;
-      width: 178.2px;
-      height: 71.9994px;
-      transform: translate3d(96px, 193px, 0px) rotateZ(0.000538014deg);
-    }
     .gwd-img-18ku {
       position: absolute;
       transform-origin: 50% 50% 0px;
@@ -65,7 +47,7 @@
       transform-origin: 50% 50% 0px;
       width: 197.958px;
       height: 108.327px;
-      transform: translate3d(284px, 360px, 0px) rotateZ(-0.0226737deg);
+      transform: translate3d(12px, -4px, 0px) rotateZ(-0.0226737deg);
     }
     .gwd-img-1ky6 {
       position: absolute;
@@ -109,15 +91,15 @@
       transform-style: preserve-3d;
       height: 506.445px;
       width: 230.793px;
-      transform: translate3d(187px, -30px, 0px) rotateZ(-0.997305deg);
+      transform: translate3d(200px, -32px, 0px) rotateZ(-0.997305deg);
     }
     .gwd-img-1834 {
       position: absolute;
-      width: 238px;
       transform-origin: 50% 50% 0px;
-      height: 83px;
-      left: 482px;
-      top: 380px;
+      top: 8px;
+      left: 210px;
+      width: 232px;
+      height: 95px;
     }
     .gwd-img-fq6y {
       position: absolute;
@@ -129,20 +111,20 @@
     .gwd-img-1dml {
       position: absolute;
       transform-origin: 50% 50% 0px;
-      height: 190px;
-      width: 357px;
-      left: 275px;
-      top: 463px;
+      left: 264px;
+      top: 456px;
+      height: 189px;
+      width: 368px;
     }
     .gwd-img-1569 {
       position: absolute;
-      width: 270px;
-      height: 212px;
-      transform-origin: 135px 106px 0px;
       left: 566px;
       top: 482px;
       transform-style: preserve-3d;
-      transform: translate3d(331px, -95px, 0px) rotateZ(-1.18894deg);
+      width: 268.875px;
+      height: 209.8px;
+      transform-origin: 134.438px 104.9px 0px;
+      transform: translate3d(362px, -87px, 0px) rotateZ(-1.18894deg);
     }
     .gwd-img-dn22 {
       position: absolute;
@@ -183,6 +165,55 @@
       left: 498px;
       top: 121px;
     }
+    .gwd-img-w1es {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 378px;
+      height: 351px;
+      transform-origin: 50% 50% 0px;
+      transform-style: preserve-3d;
+      transform: translate3d(15px, 102px, 0px) rotateZ(-0.969051deg);
+    }
+    .gwd-img-1edd {
+      position: absolute;
+      width: 250px;
+      height: 394px;
+      transform-origin: 125px 197px 0px;
+      left: 12px;
+      top: 456px;
+    }
+    .gwd-img-12z1 {
+      position: absolute;
+      width: 335px;
+      height: 94px;
+      left: 297px;
+      top: 362px;
+    }
+    .gwd-img-10ui {
+      position: absolute;
+      width: 247px;
+      height: 283px;
+      transform-origin: 50% 50% 0px;
+      left: 1229px;
+      top: 589px;
+    }
+    .gwd-img-ll57 {
+      position: absolute;
+      top: 827px;
+      left: -2px;
+      width: 523px;
+      height: 368px;
+      transform-origin: 261.5px 183.815px 0px;
+    }
+    .gwd-img-1xwe {
+      position: absolute;
+      width: 472px;
+      height: 336px;
+      transform-origin: 50% 50% 0px;
+      left: 521px;
+      top: 843px;
+    }
     @media (width: 810px) and (height: 467px) {}
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
@@ -192,8 +223,6 @@
 
 <body class="htmlNoPages">
   <script gwd-served-sizes="" type="application/json">["810x467"]</script>
-  <img src="assets/image.png" class="gwd-img-lm1o">
-  <img src="assets/image_1.png" class="gwd-img-1sxh">
   <img src="assets/image_2.png" class="gwd-img-18ku">
   <img src="assets/image_3.png" class="gwd-img-1lt7">
   <img src="assets/image_4.png" class="gwd-img-1ky6">
@@ -210,6 +239,12 @@
   <img src="assets/image_14.png" class="gwd-img-vx5o">
   <img src="assets/image_15.png" class="gwd-img-1hij">
   <gwd-youtube id="gwd-youtube_1" video-url="https://www.youtube.com/watch?v=CboR8yFPP9k" class="gwd-youtube-1li5" data-gwd-name="among us fail"></gwd-youtube>
+  <img src="assets/image_16.png" class="gwd-img-w1es">
+  <img src="assets/image_17.png" class="gwd-img-1edd">
+  <img src="assets/image_18.png" class="gwd-img-12z1">
+  <img src="assets/image_19.png" class="gwd-img-10ui">
+  <img src="assets/image_20.png" class="gwd-img-ll57">
+  <img src="assets/image_21.png" class="gwd-img-1xwe">
 </body>
 
 </html>
