--- a/videos/videos.html
+++ b/videos/videos.html
@@ -37,11 +37,22 @@
       left: 188px;
       top: 40px;
     }
+    .gwd-video-19ws {
+      position: absolute;
+      left: 932px;
+      top: 68px;
+      width: 220px;
+      height: 423px;
+      transform-origin: 50% 50% 0px;
+    }
+    @media (width: 830px) and (height: 486px) {}
   </style>
 </head>
 
 <body class="htmlNoPages">
+  <script gwd-served-sizes="" type="application/json">["830x486"]</script>
   <img src="assets/image.png" class="gwd-img-1sp4">
+  <video src="assets/VID_170020425_000109_620.mp4" id="VID_170020425_000109_620" class="gwd-video-19ws" controls="controls"></video>
 </body>
 
 </html>
